tdf#161205 Persist Complex/Asian tab choice in character dialog

When RTL/CTL and CJK support are both enabled, the font options for
those language groups are stacked into a single notebook.

Previously, the GUI would always default to showing "Asian" as the
selected tab, which was inconvenient for users who need to have broad
language support enabled, but tend to use RTL/CTL languages more often.
This change makes the user's previously-activated tab persist across
sessions.

Change-Id: Ie77bacb22c467349898591ddcc8ccf3cca890a2c
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/192123
Reviewed-by: Jonathan Clark <jonathan@libreoffice.org>
Tested-by: Jenkins